# learning-studio-data

./: .gitignore  .markdownlint.yaml  README.md  package-lock.json  package.json
data/: areas.json  questions-ca-fdl.json  questions-ca-ipc.json  questions-ca-log1.json  questions-en-fdl.json  questions-en-ipc.json  questions-en-log1.json  questions-fdl-ca.json  questions-fdl-en.json  questions-fdl.json  questions-ipc-ca.json  questions-ipc-en.json  questions-ipc.json  questions-log1-ca.json  questions-log1-en.json  questions-log2-ca.json  questions-log2-en.json  questions-log2.json  questions-logica1.json
scripts/: audit-language-data.mjs  deploy-data.sh  preguntas_logica2.py  pyproject.toml  requirements.txt  translate_json.py
test-data/: questions-mcq-tests-ca.json  questions-mcq-tests-en.json
